@@ -1,3 +1,7 @@
+2012-12-11  JJ Allaire <jj@rstudio.org>
+      
+        * R/Attributes.R: always print output when shared library is not created
+
 2012-12-11 Romain Francois <romain@r-enthusiasts.com>
 
         * include/Rcpp/String.h: missing operator +=( const StringProxy& )
